* cse.c (cse_insn): Avoid subreg games if the equivalence         is already in the proper mode.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56819 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-04  Richard Henderson  <rth@redhat.com>
+
+	* cse.c (cse_insn): Avoid subreg games if the equivalence
+	is already in the proper mode.
+
 2002-09-04  Eric Botcazou  <ebotcazou@multimania.com>
 
 	PR c/7102
