gcc: 	* loop.c (scan_loop): Don't mark separate insns out of a libcall 	for moving. 	(move_movables): Abort if we see the first insn of a libcall. gcc/testsuite 	* gcc.c-torture/execute/loop-14.c: New test.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56823 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Thu Sep  5 00:34:33 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* loop.c (scan_loop): Don't mark separate insns out of a libcall
+	for moving.
+	(move_movables): Abort if we see the first insn of a libcall.
+
 2002-09-04  Richard Henderson  <rth@redhat.com>
 
 	* builtin-types.def (BT_FN_FLOAT): New.
