--- a/gcc/config/s390/s390.md
+++ b/gcc/config/s390/s390.md
@@ -278,7 +278,7 @@
 
 (define_insn "*tmqi_ext"
   [(set (reg 33)
-        (compare (zero_extract:SI (match_operand:QI 0 "s_operand" "Q")
+        (compare (zero_extract:SI (match_operand:QI 0 "memory_operand" "Q")
 	                          (match_operand:SI 1 "const_int_operand" "n")
                                   (match_operand:SI 2 "const_int_operand" "n"))
                  (const_int 0)))]
@@ -345,7 +345,7 @@
 
 (define_insn "*tmdi_mem"
   [(set (reg 33)
-        (compare (and:DI (match_operand:DI 0 "s_operand" "%Q")
+        (compare (and:DI (match_operand:DI 0 "memory_operand" "%Q")
                          (match_operand:DI 1 "immediate_operand" "n"))
                  (match_operand:DI 2 "immediate_operand" "n")))]
   "TARGET_64BIT
@@ -365,7 +365,7 @@
 
 (define_insn "*tmsi_mem"
   [(set (reg 33)
-        (compare (and:SI (match_operand:SI 0 "s_operand" "%Q")
+        (compare (and:SI (match_operand:SI 0 "memory_operand" "%Q")
                          (match_operand:SI 1 "immediate_operand" "n"))
                  (match_operand:SI 2 "immediate_operand" "n")))]
   "s390_match_ccmode (insn, s390_tm_ccmode (operands[1], operands[2], 0))
@@ -384,7 +384,7 @@
 
 (define_insn "*tmhi_mem"
   [(set (reg 33)
-        (compare (and:SI (subreg:SI (match_operand:HI 0 "s_operand" "%Q") 0)
+        (compare (and:SI (subreg:SI (match_operand:HI 0 "memory_operand" "%Q") 0)
                          (match_operand:SI 1 "immediate_operand" "n"))
                  (match_operand:SI 2 "immediate_operand" "n")))]
   "s390_match_ccmode (insn, s390_tm_ccmode (operands[1], operands[2], 0))
@@ -403,7 +403,7 @@
 
 (define_insn "*tmqi_mem"
   [(set (reg 33)
-        (compare (and:SI (subreg:SI (match_operand:QI 0 "s_operand" "%Q") 0)
+        (compare (and:SI (subreg:SI (match_operand:QI 0 "memory_operand" "%Q") 0)
                          (match_operand:SI 1 "immediate_operand" "n"))
                  (match_operand:SI 2 "immediate_operand" "n")))]
   "s390_match_ccmode (insn, s390_tm_ccmode (operands[1], operands[2], 0))"
@@ -645,7 +645,7 @@
 
 (define_insn "*cli"
   [(set (reg 33)
-        (compare (match_operand:QI 0 "s_operand" "Q")
+        (compare (match_operand:QI 0 "memory_operand" "Q")
                  (match_operand:QI 1 "immediate_operand" "n")))]
   "s390_match_ccmode (insn, CCUmode)"
   "cli\\t%0,%b1"
@@ -1947,8 +1947,8 @@
 
 (define_expand "cmpstrdi"
    [(set (match_operand:DI 0 "register_operand" "")
-         (compare:DI (match_operand:BLK 1 "s_operand" "")
-                  (match_operand:BLK 2 "s_operand" "") ) )
+         (compare:DI (match_operand:BLK 1 "general_operand" "")
+                  (match_operand:BLK 2 "general_operand" "") ) )
              (use (match_operand:DI 3  "general_operand" ""))
              (use (match_operand:DI 4  "" ""))]
    "TARGET_64BIT"
@@ -2008,8 +2008,8 @@
 
 (define_expand "cmpstrsi"
    [(set (match_operand:SI 0 "register_operand" "")
-         (compare:SI (match_operand:BLK 1 "s_operand" "")
-                  (match_operand:BLK 2 "s_operand" "") ) )
+         (compare:SI (match_operand:BLK 1 "general_operand" "")
+                  (match_operand:BLK 2 "general_operand" "") ) )
              (use (match_operand:SI 3  "general_operand" ""))
              (use (match_operand:SI 4  "" ""))]
    ""
@@ -3187,7 +3187,7 @@
 (define_expand "reload_indi"
   [(parallel [(match_operand:DI 0 "register_operand" "=a")
               (match_operand:DI 1 "s390_plus_operand" "")
-              (match_operand:TI 2 "register_operand" "=&a")])]
+              (match_operand:DI 2 "register_operand" "=&a")])]
   "TARGET_64BIT"
   "
 {
@@ -3348,7 +3348,7 @@
 (define_expand "reload_insi"
   [(parallel [(match_operand:SI 0 "register_operand" "=a")
               (match_operand:SI 1 "s390_plus_operand" "")
-              (match_operand:DI 2 "register_operand" "=&a")])]
+              (match_operand:SI 2 "register_operand" "=&a")])]
   "!TARGET_64BIT"
   "
 {
