--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,10 @@
+2002-09-05  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/abi/ia64-unknown-linux-gnu: Add.
+	* config/abi/ia64-unknown-linux-gnu/baseline_symbols.txt: New file.
+	* config/abi/alphaev67-unknown-linux-gnu: Add.
+	* config/abi/alphaev67-unknown-linux-gnu/baseline_symbols.txt: New file.
+
 2002-09-05  Phil Edwards  <pme@gcc.gnu.org>
 
 	* testsuite/Makefile.am:  Use LD_RUN_PATH when linking abi_check.
