* config/rs6000/xcoff.h (HOT_TEXT_SECTION_NAME): Delete.         (UNLIKELY_EXECUTED_TEXT_SECTION_NAME): Delete.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56856 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-05  David Edelsohn  <edelsohn@gnu.org>
+
+	* config/rs6000/xcoff.h (HOT_TEXT_SECTION_NAME): Delete.
+	(UNLIKELY_EXECUTED_TEXT_SECTION_NAME): Delete.
+
 2002-09-05  Jason Thorpe  <thorpej@wasabisystems.com>
 
 	* real.c: Avoid parse error if FLOAT_WORDS_BIG_ENDIAN is
