--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-09-05  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* frv.c (frv_unique_section, frv_select_section,
+	frv_select_rtx_section): Delete.
+	(frv_in_small_data_p): New.
+	(TARGET_ASM_UNIQUE_SECTION, TARGET_ASM_SELECT_SECTION,
+	TARGET_ASM_SELECT_RTX_SECTION): Delete.
+	(TARGET_IN_SMALL_DATA_P): Define.
+
 2002-09-05  Dale Johannesen  <dalej@apple.com>
 
 	* reload1.c (reload):  Retain only those memory clobbers
