* gcc.c-torture/execute/extzvsi.c: New test.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56868 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-06  Alan Modra  <amodra@bigpond.net.au>
+
+	* gcc.c-torture/execute/extzvsi.c: New test.
+
 2002-09-05  Stan Shebs  <shebs@apple.com>
 
 	* gcc.dg/weak-1.c: xfail on Darwin.
