--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+Fri Sep  6 16:17:33 2002  Nicola Pero  <n.pero@mi.flashnet.it>
+
+	* objc/objc-act.c (dump_interface): Enlarged the char * buffer to
+	10k.  Fixed category dumping - print out category names with the
+	proper syntax.  Print '@end\n' and not '\n@end' at the end of the
+	interface.
+        (finish_objc): Fixed the -gen-decls option.  It was printing out
+	only the last class.  Dump an interface declaration of all classes
+	being compiled instead.
+
 2002-09-06  Jason Thorpe  <thorpej@wasabisystems.com>
 
 	* config/arm/arm-protos.h (arm_gen_return_addr_mask): New 
