Removed objc/formal-protocol-6.x as this testcase is now supposed to pass
From-SVN: r56889

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+Fri Sep  6 16:39:37 2002  Nicola Pero  <n.pero@mi.flashnet.it>
+
+	* objc/execute/formal_protocol-6.x: Removed.  This testcase is now
+	expected to pass.
+
 2002-09-06  Stan Shebs  <shebs@apple.com>
 	    David Edelsohn  <edelsohn@gnu.org>
 
