* gcc.dg/cpp/_Pragma4.c: Fix typo.
From-SVN: r56891

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-06  Neil Booth  <neil@daikokuya.co.uk>
+
+	* gcc.dg/cpp/_Pragma4.c: Fix typo.
+
 Fri Sep  6 16:39:37 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* objc/execute/formal_protocol-6.x: Removed.  This testcase is now
