--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Fri Sep  6 13:10:08 2002  Jeffrey A Law  (law@redhat.com)
+
+        * pentium.md (pentium-firstvboth): Fix typo.
+
 2002-09-06	Dhananjay Deshpande <dhananjayd@kpit.com>
 
 	* h8300.c (enum shift_alg): Move to earlier in h8300.c.
