--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-05  Ziemowit Laski <zlaski@apple.com>
+
+	* objc.dg/proto-lossage-1.m: New test.
+
 2002-09-06  Neil Booth  <neil@daikokuya.co.uk>
 
 	* gcc.dg/cpp/_Pragma4.c: Fix typo.
