--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2002-09-07  Alan Modra  <amodra@bigpond.net.au>
 
+	* config/rs6000/linux64.h (ASM_PREFERRED_EH_DATA_FORMAT): Define.
+
 	* doc/tm.texi (TARGET_ASM_ASSEMBLE_VISIBILITY): Describe.
 	* target-def.h (TARGET_ASM_ASSEMBLE_VISIBILITY): Define.
 	(TARGET_ASM_OUT): Add the above here.
