* rtlanal.c (dead_or_set_regno_p): Fix typo.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56915 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-07  Graham Stott  <graham.stott@btinternet.con>
+
+       * rtlanal.c (dead_or_set_regno_p): Fix typo.
+
 2002-09-07  Alan Modra  <amodra@bigpond.net.au>
 
 	* config/rs6000/linux64.h (ASM_PREFERRED_EH_DATA_FORMAT): Define.
