--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-07  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>
+
+	* cfgcleanup.c (try_crossjump_to_edge): Fix updating of liveness
+	information.
+
 2002-09-07  Graham Stott  <graham.stott@btinternet.con>
 
        * rtlanal.c (dead_or_set_regno_p): Fix typo.
