--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-07  Jan Hubicka  <jh@suse.cz>
+
+	* com.c (ffe_type_for_mode): Handle long double.
+
 2002-09-04  Richard Henderson  <rth@redhat.com>
 
 	* target.h (ffetarget_print_real1, ffetarget_print_real2): Update
