--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-07  Richard Henderson  <rth@redhat.com>
+
+	* real.c (ereal_inf): Clear E before use.
+
 2002-09-07  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/h8300/h8300.md (udivmodqi4): Split the pattern into
