--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-09-07  Richard Henderson  <rth@redhat.com>
 
+	* builtins.def (inf, inff, infl): Mark const.
+	(huge_val, huge_valf, huge_vall): Likewise.
+	(BUILT_IN_GETEXP, BUILT_IN_GETMAN): Remove.
+
 	* real.c (ereal_inf): Clear E before use.
 
 2002-09-07  Kazu Hirata  <kazu@cs.umass.edu>
